<resources>
    <string name="app_name">LeadershipLibrary</string>
    <string name="facebook_application_id" translatable="false">1837583773163041</string>
    <string name="facebook_login_protocol_scheme" translatable="false">1837583773163041</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_splash">Leadership</string>
    <string name="unknown_sign_in_response">Unknown sign in response</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="welcome_platform">Welcome to the best Leadership Platform in the world!</string>
    <string name="staff_welcome">Welcome! The tools for Leadership have arrived</string>
    <string name="leader_welcome">Welcome! We need Leaders everywhere ...</string>
    <string name="platform_welcome">Leadership Platform Welcome</string>
    <string name="title_activity_le_you_tube">LeYouTube</string>
    <string name="title_activity_podcast_selection">Podcast Selection</string>
    <string name="expand">expand</string>
    <string name="shrink">shrink</string>
    <string name="ellipse">...</string>
    <string name="tips">This is a custom TextView that can be expanded with a smooth transition animation,you can set the number of lines to expand,change its icon or text and so on\n</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_media">Media</string>
    <string name="action_photo">Photo</string>
    <string name="title_activity_le_exo_player">LeExo Player</string>
    <string name="video">LEADERSHIP VIDEOS</string>
    <string name="audio">Audio</string>
    <string name="company_profile">COMPANY PROFILE</string>
    <string name="daily_thought">LEADERSHIP DAILY THOUGHTS</string>
    <string name="news_article">LEADERSHIP ARTICLES</string>
    <string name="weeky_master_class">LEADERSHIP MASTERCLASS</string>
    <string name="weekly_message">TOP LEADER THOUGHT</string>
    <string name="photo">LEADERSHIP PHOTOS</string>
    <string name="podcast">LEADERSHIP PODCASTS</string>
    <string name="ebooks">LEADERSHIP EBOOKS</string>
    <string name="users">LEADERSHIP STAFF</string>
    <string name="hormony_list">HARMONY THOUGHTS</string>
    <string name="my_thought">MY LEADERSHIP THOUGHT</string>
    <string name="calendar_events">LEADERSHIP CALENDER EVENTS</string>
    <string name="Photographs">Photographs</string>
    <string name="text">Text</string>
    <string name="retry">Retry</string>
    <string name="selection_disabled">Disabled</string>
    <string name="selection_default">Default</string>
    <string name="selection_default_none">Default (none)</string>
    <string name="unexpected_intent_action">Unexpected intent action</string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder </string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder </string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder</string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="search_hint">Enter search ...</string>
    <string name="title_activity_media_list">MediaListActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_subscriber_drawer">Subscriber Drawer</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_audio_player">Audio Player</string>
    <string name="title_category">Choose Your Topics</string>
    <string name="confirm_photo">Use Photo</string>
    <string name="confirm_video">Use Video</string>
    <string name="rating">Rating</string>
    <string name="title_activity_daily_thought">Daily Thought</string>
    <string name="title_activity_podcast">Podcast</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_e_book">eBook</string>
    <string name="title_activity_weekly_classes">Weekly MasterClasses</string>
    <string name="ebook_web_activity">Book</string>
    <string name="title_activity_web_view">WebView</string>
    <string name="title_activity_video_player">Video Player</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity__podcast_list">Podcasts Attachments</string>
    <string name="title_activity_deep_link">Deep Link</string>
    <string name="title_activity_theme">ThemeChooser</string>
    <string name="title_activity_image_list">Images</string>
    <string name="share">Share</string>
    <string name="action_play_next">Play Next</string>
    <string name="action_calender">Calender</string>
    <string name="adding_calender_event_in_android">Add Calender Event</string>
    <string name="title_activity_video_list">Video List</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_music">Music</string>
    <string name="title_activity_podcast_player">Podcast Player</string>
    <string name="title_activity_full_photo">Full Photo</string>
    <string name="title_activity_my_android_app">Rating Activity</string>
    <string name="invitation_title">Leadership Platform</string>
    <string name="invitation_message">The world needs leaders</string>
    <string name="invitation_deep_link">https://vfb7b.app.goo.gl/tobR</string>
    <string name="invitation_custom_image">http://urbanleadershiplab.com/wp-content/uploads/2013/09/14970845-leadership-concept-in-word-tag-cloud-on-white-background1.jpg</string>
    <string name="invitation_cta">View App</string>
    <string name="invite_dialog_title">You got an invitation!</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
    <string name="invitation_id_fmt" formatted="false">Invitation ID: %s</string>
    <string name="normal_layout">Username</string>
    <string name="wide_layout">Wide Layout</string>
    <string name="title_activity_full_article">Article</string>
    <string name="decimal_step_size">Decimal Step Size</string>
    <string name="framework_implementation">Comments made</string>
    <string name="library_implementation">Category</string>
    <string name="library_implementation_tinted">Library Implementation (Tinted)</string>
    <string name="action_about">About</string>
    <string name="about_title">About</string>
    <string name="about_name">MaterialRatingBar</string>
    <string name="about_version_format">Version %1$s</string>
    <string name="about_credit">Zhang Hai 2016</string>
    <string name="about_github"><a href="https://github.com/DreaminginCodeZH/MaterialRatingBar">View on GitHub</a></string>
    <string name="title_activity_category">Choose Topic</string>
    <string name="alert_color">colour</string>
    <string name="success">Welcome! Thanks for signing in</string>
    <string name="enter_thought">Enter Thought</string>
    <string name="enter_thought_author">Enter thought author</string>
    <string name="enter_news_content">Enter news content</string>
    <string name="enter_class_message">Enter class message</string>
    <string name="enter_author_name">Enter author name</string>
    <string name="enter_article_content">Enter article content</string>
    <string name="enter_news">Enter News</string>
    <string name="enter_subtitle">Enter Subtitle</string>
    <string name="title_webview">Web View</string>
    <string name="title_questions">Answer View</string>
    <string name="title_results">Results View</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_thought_approval">ThoughtApprovalActivity</string>
    <string name="title_activity_create_daily_thought">CreateDailyThoughtActivity</string>
    <string name="title_activity_pldp">My PLDP</string>
    <string-array name="q1">
        <item>What are my personal motivators, drivers, aspirations that motivate me?</item>
        <item>Trustworthy </item>
        <item>Being Relevant</item>
        <item>Self-Indulgence</item>
        <item>Career Advancement</item>
        <item>opt3</item>
    </string-array>
    <string-array name="q2">
        <item>What actions and plans am I following to assist me to achieve my motivation?</item>
        <item>Believe in yourself</item>
        <item>Think about the process to reach your goal</item>
        <item>Visualize your steps before going to bed</item>
        <item>Strive, fight and stay positive</item>
        <item>opt2</item>
    </string-array>
    <string-array name="q3">
        <item>What resources, systems or structures do I need to implement my direction?</item>
        <item>Step 1: Organizational development (OD) with the potential of carrying out a strategy successfully.</item>
        <item>Step 2: Utilizing financial resources to engage in activities that are essential to the strategy.</item>
        <item>step 3: Formulate company policies that support the strategy.</item>
        <item>step 4: Ensure continous improvements through superior programs and policies.</item>
        <item>opt3</item>
    </string-array>
    <string-array name="q4">
        <item>What is the capital of Sierra Leone?</item>
        <item>Freetown</item>
        <item>Centerville</item>
        <item>Chestershire</item>
        <item>Nowhere</item>
        <item>opt1</item>
    </string-array>
    <string-array name="q5">
        <item>The capital city of Belize is … ?</item>
        <item>San Ignacio</item>
        <item>Belissimo</item>
        <item>Belize City</item>
        <item>Belmopan</item>
        <item>opt4</item>
    </string-array>
    <string-array name="q6">
        <item>What is the capital city of Qatar?</item>
        <item>Doha</item>
        <item>Mesaieed</item>
        <item>Old Airport</item>
        <item>Dakar</item>
        <item>opt1</item>
    </string-array>
    <string-array name="q7">
        <item>What is Iceland\'s capital city?</item>
        <item>Njarõvík</item>
        <item>Kópavogur</item>
        <item>Reykjavík</item>
        <item>Mosfellsbær</item>
        <item>opt3</item>
    </string-array>
    <string name="questionNumber" formatted="false">Question %d/%d</string>
    <string name="previousButton">Previous Question</string>
    <string name="nextButton">Next Question</string>
    <string name="submitButton">Submit Answers</string>
    <string name="dontKnow">I don\'t know.</string>
    <string name="backToMenu">Back to Menu</string>
</resources>