<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.QuizQuestion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_gravity="center_horizontal"
        android:fadeScrollbars="false"
        android:scrollIndicators="right"
        android:layout_above="@+id/linearLayout3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/questionNumber"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/questionNumber" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dontKnow"
                android:id="@+id/qDescription"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="20dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:id="@+id/options">
            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="New RadioButton"
                android:id="@+id/opt1"
                android:buttonTint="@color/colorPrimaryDark" />

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="New RadioButton"
                android:id="@+id/opt2"
                android:buttonTint="@color/colorPrimaryDark" />

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="New RadioButton"
                android:id="@+id/opt3"
                android:buttonTint="@color/colorPrimaryDark" />

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="New RadioButton"
                android:id="@+id/opt4"
                android:backgroundTint="@color/colorPrimaryDark"
                android:buttonTint="@color/colorPrimaryDark" />

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dontKnow"
                android:id="@+id/opt0"
                android:checked="true"
                android:buttonTint="@color/colorPrimaryDark" />
    </RadioGroup>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/previousButton"
                    android:id="@+id/previousBtn"
                    android:layout_gravity="center_horizontal"
                    android:onClick="previous"
                    android:backgroundTint="@color/colorPrimary" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nextButton"
                    android:id="@+id/nextBtn"
                    android:onClick="next"
                    android:backgroundTint="@color/colorPrimary" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:id="@+id/linearLayout3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backToMenu"
            android:id="@+id/backtomenu"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="backToMenu" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitButton"
            android:id="@+id/button3"
            android:onClick="submit"
            android:backgroundTint="@color/colorPrimary" />

    </LinearLayout>

</RelativeLayout>
